Implémentation du responsive

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,7 +20,59 @@ header {
     justify-content: space-between;
     min-height: 50px;
     padding: 20px;
-    margin: 0 auto;
+}
+
+nav {
+    height: 4em;
+}
+
+.burger-menu {
+    height: 80%;
+    width: 4em;
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.burger-bar {
+    width: 4em;
+    height: 0.5em;
+    background-color: #ffffff;
+    border-radius: 0.5em;
+}
+
+.menu {
+    width: 50%;
+    height: 100vh;
+    background-color: #3b2676;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: inherit;
+}
+
+.burger-bar.clicked:nth-child(1){
+    transform: rotate(45deg) translate(0.75em, 1.25em);
+    transition: ease-out 0.5s;
+}
+
+.burger-bar.clicked:nth-child(2){
+    transform: scale(0.1);
+    transition: ease-out 0.5s;
+}
+
+.burger-bar.clicked:nth-child(3){
+    transform: rotate(135deg) translate(-0.7em, 1em);
+    transition: ease-out 0.5s;
 }
 
 a {
@@ -67,6 +119,7 @@ nav > ul {
     position: relative;
     transition: all 0.5s;
     transform-style: preserve-3d;
+    cursor: pointer;
 }
 
 .pochette {
@@ -99,7 +152,7 @@ nav > ul {
     justify-content: center;
     align-items: center;
     margin-top: 100px;
-    gap: 100px;
+    gap: 200px;
 }
 
 .description {
@@ -133,7 +186,7 @@ h2 {
     display: block;
     border-radius: 20px;
     object-fit: cover;
-    height: 1000px;
+    height: 900px;
 }
 
 .slideshow_arrow_back,
@@ -169,7 +222,7 @@ h2 {
 
 .linkcontainer a {
     padding: 30px;
-    border: 3px solid #3b2676;
+    border: 2px solid #3b2676;
     background-color: #7e5cd9;
     border-radius: 20px;
     transition: 0.2s;
@@ -199,7 +252,7 @@ p {
 }
 
 section {
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;    
@@ -238,8 +291,8 @@ section {
 
 .button:hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
-  border: 2px solid black;
+  transition-duration: 0.2s;
+  border: 2px solid #332165;
 }
 
 footer {
@@ -276,9 +329,94 @@ footer {
     transform: scale(1.1);
 }
 
+:root{
+    --animation-curve: cubic-bezier(1,0,0,1);
+}
 
-@media (min-width: 768px) {
-  .button {
-    padding: 0 2.6rem;
-  }
+label {
+    display: none;
+}
+
+input{
+    display: none;
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    header a {
+        width: 20vw;
+    }
+
+    .burger-menu {
+        display: flex;
+    }
+
+    .pochette {
+        width: 90%; 
+    }
+
+    .linkcontainer {
+        flex-direction: column;
+        width: 50%;
+    }
+
+    iframe {
+        width: 100%;
+    }
+
+    .socialcontainer {
+        max-width: 90%;
+        gap: 25px;
+    }
+
+    .socialcontainer a {
+        width: 200px;
+    }
+
+    nav > ul {
+        width: 35vw;
+    }
+
+    section {
+        width: 100%;
+    }
+
+    .hero_container {
+        flex-direction: column;
+        max-width: 100%;
+    }
+
+    .music-flex-container {
+        flex-direction: column-reverse;
+        max-width: 100%;
+    }
+
+    .slideshow {
+        max-width: 95%;
+    }
+
+    .linkcontainer {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .socialcontainer {
+        flex-direction: column;
+    }
+
+    .button {
+        padding: 0 2.6rem;
+    }
+
+    p {
+        width: 90%;
+    }
+
+    .slideshow img {
+        height: 350px;
+    }
 }
